added layout elements

--- a/citizentalk/templates/base_layout.html
+++ b/citizentalk/templates/base_layout.html
@@ -1,13 +1,23 @@
-<html>
-<head>
-    <title>{% block title %}CitizenTalk.org{% endblock %}</title>
-    <link rel="stylesheet" href="/static/issues.css" />
-</head>
-<body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+		<title>{% block title %}CitizenTalk{% endblock %}</title>
+		<link href="/static/style.css" media="screen" rel="stylesheet" type="text/css" />
+		<link href="resources/js/" media="screen" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<div class="wrapper" id="top">
 
-<h1>CitizenTalk.org</h1>
+            <div class="content">
+            {% block content %}{% endblock %}
+            </div>
+		</div><!-- .wrapper #top -->
 
-{% block content %}{% endblock %}
-
-</body>
+		<div id="footer">
+        {% block footer %}
+            
+        {% endblock %}
+		</div><!-- #footer -->
+	</body>
 </html>
