--- a/citizentalk/templates/base_layout.html
+++ b/citizentalk/templates/base_layout.html
@@ -14,6 +14,9 @@
                                 {% block menu %}
                                         <a href="/issues/explore/">Explore</a>
                                         {% if user.is_authenticated %}
+                                            {% if user.is_superuser %}
+                                                <a href="/admin/">Admin</a>
+                                            {% endif %}
                                             <a href="/logout/">Sign out</a>
                                         {% else %}
                                             <a href="/login/">Sign in</a>
