more interface updates

--- a/citizentalk/templates/base_layout.html
+++ b/citizentalk/templates/base_layout.html
@@ -21,15 +21,31 @@
                                 </div> <!-- .clear -->
                         </div><!-- header -->
                         
-                        <div id="content">
+                        <div class="content">
                                 {% block content %}{% endblock %}
-                        </div><!-- #content -->
+                        </div><!-- .content -->
                 </div><!-- .wrapper #top -->
 
                 <div id="footer">
                         <div class="wrapper">
                                 <div id="footer-top">
-                                        {% block footer %}{% endblock %}
+                                        <div class="content">
+                                                <p>
+                                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fermentum sagittis lacus, ut vestibulum lectus venenatis in. Proin nec arcu lorem, et pharetra metus. Maecenas blandit tempor nunc, sed commodo leo malesuada sit amet. Sed imperdiet, nulla a interdum pharetra, erat nisl ornare est, blandit porttitor est velit in nibh. Suspendisse at eros pretium neque varius fringilla sed ut sapien.
+                                                </p>
+
+                                                <div id="footer-top-links">
+                                                        <a href="#">Lorem ipsum</a>
+                                                        <a href="#">Dolor sit amet</a>
+                                                        <a href="#">Consectetur adipiscing</a>
+                                                        <a href="#">Elit commodo</a>
+                                                        <a href="#">Nunc fermentum</a>
+                                                </div><!-- #footer-links -->
+
+                                                <div class="clear">
+                                                        <!-- -->
+                                                </div> <!-- .clear -->
+                                        </div> <!-- .content -->
                                 </div><!-- #footer-top -->
 
                                 <div id="footer-bottom">
