--- a/citizentalk/dashboard/static/style.css
+++ b/citizentalk/dashboard/static/style.css
@@ -11,10 +11,14 @@ body {
         font-size : 14px;
 }
 
+h1 {
+        font-size : 26px;
+}
+
 div.wrapper {
         margin : 0 auto 0 auto;
-        padding : 0 20px 0 20px;
-        width : 1000px;
+        padding : 0 30px 0 30px;
+        width : 940px;
 }
 
 div#top {
@@ -23,7 +27,7 @@ div#top {
 
 div#header {
         height : 100px;
-        width : 960px;
+        width : 940px;
 }
 
 div#header-menu {
@@ -49,8 +53,40 @@ div#header-menu a:hover {
         color : #000000;
 }
 
-div#content {
-        height : 320px;
+div.content {
+        padding : 10px 0 10px 0;
+}
+
+div#floating-island {
+        background : url(resources/images/floating-island.jpg) no-repeat;
+        float : left;
+        height : 400px;
+        width : 640px;
+}
+
+div#updates {
+        float : right;
+        padding : 40px 0 0 0;
+        text-align : center;
+        width : 280px;
+}
+
+div.updates-block {
+        background-color : #eeeeee;
+        border : 1px solid #969696;
+        border-radius : 5px 5px 5px 5px;
+        box-shadow : rgba(0,0,0, 0.1) 0px 0px 8px;
+        margin : 10px 0 0 0;
+        padding : 10px 10px 10px 10px;
+        text-shadow : 0 1px 0 #ffffff;
+
+        -moz-border-radius : 5px 5px 5px 5px;
+        -moz-box-shadow : rgba(0,0,0, 0.1) 0px 0px 5px;
+        -webkit-box-shadow : rgba(0,0,0, 0.1) 0px 0px 5px;
+}
+
+div.updates-block b {
+        font-size : 18px;
 }
 
 div#footer {
@@ -62,6 +98,21 @@ div#footer {
 
 div#footer-top {
         height : 145px;
+}
+
+div#footer p {
+        float : left;
+        width : 680px;
+}
+
+div#footer-top-links {
+        float : right;
+        width : 240px;
+}
+
+div#footer-top-links a {
+        display : block;
+        line-height : 20px;
 }
 
 div#footer-bottom {
