--- a/citizentalk/dashboard/templates/dashboard/index.html
+++ b/citizentalk/dashboard/templates/dashboard/index.html
@@ -2,6 +2,33 @@
 {% extends "base_layout.html" %}
 
 {% block content %}
-Homepage
-{% endblock %}
+<div id="floating-island">
+        <!-- -->
+</div><!-- #floating-island -->
 
+<div id="updates">
+        <h1>Updates</h1>
+
+        <div class="updates-block">
+                <b>0,000</b>
+                <br />
+                <span>Reports in past week</span>
+        </div><!-- .updates-block -->
+
+        <div class="updates-block">
+                <b>0,000</b>
+                <br />
+                <span>Fixed in past month</span>
+        </div><!-- .updates-block -->
+
+        <div class="updates-block">
+                <b>0,000</b>
+                <br />
+                <span>Updates on reports</span>
+        </div><!-- .updates-block -->
+</div><!-- #updates -->
+
+<div class="clear">
+        <!-- -->
+</div><!-- #clear -->
+{% endblock %}
