added home link

--- a/citizentalk/templates/base_layout.html
+++ b/citizentalk/templates/base_layout.html
@@ -12,6 +12,7 @@
                         <div id="header">
                                 <div id="header-menu">
                                 {% block menu %}
+                                        <a href="/">Home</a>
                                         <a href="/issues/explore/">Explore</a>
                                         {% if user.is_authenticated %}
                                             {% if user.is_superuser %}
