--- a/citizentalk/templates/base_layout.html
+++ b/citizentalk/templates/base_layout.html
@@ -15,6 +15,7 @@
                                 {% block menu %}
                                         <a href="/">Home</a>
                                         <a href="/issues/explore/">Explore</a>
+                                        <a href="/institutions/">Institutions</a>
                                         {% if user.is_authenticated %}
                                             {% if user.is_superuser %}
                                                 <a href="/admin/">Admin</a>
