--- a/citizentalk/templates/registration/login.html
+++ b/citizentalk/templates/registration/login.html
@@ -1,4 +1,3 @@
-
 {% extends "base_layout.html" %}
 
 {% block content %}
@@ -9,20 +8,10 @@
 
 <form method="post" action="/login/">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
 
-<input type="submit" value="login" />
+{{ form.as_p }}
+
+<input type="submit" value="Login" />
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
-
 {% endblock %}
-
