--- a/citizentalk/templates/registration/login.html
+++ b/citizentalk/templates/registration/login.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 
+<form method="post" action="/login/">
+<h2>Login</h2>
+
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<p class="notice">Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<form method="post" action="/login/">
 {% csrf_token %}
 
 {{ form.as_p }}
