--- a/citizentalk/templates/base_layout.html
+++ b/citizentalk/templates/base_layout.html
@@ -34,6 +34,13 @@
             </div><!-- header -->
             
             <div class="content">
+                {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
                 {% block content %}{% endblock %}
             </div><!-- .content -->
         </div><!-- .wrapper #top -->
