simple view for adding a new issue

--- a/citizentalk/templates/base_layout.html
+++ b/citizentalk/templates/base_layout.html
@@ -14,7 +14,7 @@
                                 <div id="header-menu">
                                 {% block menu %}
                                         <a href="/">Home</a>
-                                        <a href="/issues/explore/">Explore</a>
+                                        <a href="/issues/">Issues</a>
                                         <a href="/institutions/">Institutions</a>
                                         {% if user.is_authenticated %}
                                             {% if user.is_superuser %}
