--- a/citizentalk/issues/templates/issues/index.html
+++ b/citizentalk/issues/templates/issues/index.html
@@ -4,7 +4,10 @@
 {% block content %}
 
 <a href="/issues/new/">Add new issue</a><br />
-List of open issues.
+
+{% for issue in issues %}
+    <h1>{{ issue.title }}</h1><br />
+{% endfor %}
 
 {% endblock %}
 
