--- a/citizentalk/institutions/templates/institutions/search.html
+++ b/citizentalk/institutions/templates/institutions/search.html
@@ -5,13 +5,31 @@
 <h1>Institutions</h1>
 
 <ul>
-{% for institution in institutions %}
+{% for institution in institutions.object_list %}
   <li>
     <a href="/institutions/{{ institution.id }}">{{ institution.title }}</a>
     [<a href="/institutions/edit?id={{institution.id}}">edit</a>]
   </li>
 {% endfor %}
 </ul>
+
+<br />
+<div class="pagination">
+    <span class="step-links">
+        {% if institutions.has_previous %}
+            <a href="?page={{ institutions.previous_page_number }}">Previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ institutions.number }} of {{ institutions.paginator.num_pages }}.
+        </span>
+
+        {% if institutions.has_next %}
+            <a href="?page={{ institutions.next_page_number }}">Next</a>
+        {% endif %}
+    </span>
+</div>
+
 
 {% endblock %}
 
