added basic counters for homepage

--- a/citizentalk/dashboard/templates/dashboard/index.html
+++ b/citizentalk/dashboard/templates/dashboard/index.html
@@ -9,19 +9,19 @@
     <h1>Updates</h1>
 
     <div class="updates-block">
-        <b>0,000</b>
+        <b>{{ reported_issues }}</b>
         <br />
-        <span>Reports in past week</span>
+        <span>Reported Issues</span>
     </div><!-- .updates-block -->
 
     <div class="updates-block">
-        <b>0,000</b>
+        <b>{{ fixed_issues }}</b>
         <br />
-        <span>Fixed in past month</span>
+        <span>Fixed Issues</span>
     </div><!-- .updates-block -->
 
     <div class="updates-block">
-        <b>0,000</b>
+        <b>{{ updates_on_reports }}</b>
         <br />
         <span>Updates on reports</span>
     </div><!-- .updates-block -->
